# agentic-reality

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GUIDE.md  INSTALL.md  LICENSE  Makefile  README.md  SECURITY.md
.github/workflows/: canonical-sister-guardrails.yml  ci.yml  install-command-guardrails.yml  release.yml  runtime-hardening-guardrails.yml
crates/agentic-reality/: Cargo.toml
crates/agentic-reality-cli/: Cargo.toml
crates/agentic-reality-cli/src/: main.rs
crates/agentic-reality-ffi/: Cargo.toml
crates/agentic-reality-ffi/src/: lib.rs
crates/agentic-reality-mcp/: Cargo.toml
crates/agentic-reality-mcp/src/: lib.rs  main.rs
crates/agentic-reality-mcp/src/config/: mod.rs
crates/agentic-reality-mcp/src/prompts/: mod.rs
crates/agentic-reality-mcp/src/protocol/: compact.rs  handler.rs  mod.rs  negotiation.rs  validator.rs
crates/agentic-reality-mcp/src/resources/: mod.rs
crates/agentic-reality-mcp/src/session/: mod.rs
crates/agentic-reality-mcp/src/streaming/: mod.rs
crates/agentic-reality-mcp/src/tools/: mod.rs  registry.rs
crates/agentic-reality-mcp/src/transport/: mod.rs
crates/agentic-reality-mcp/src/types/: capabilities.rs  error.rs  message.rs  mod.rs  notification.rs  request.rs  response.rs
crates/agentic-reality-mcp/tests/: mcp_tool_count.rs  phase01_deployment.rs  phase02_protocol.rs  phase03_error_handling.rs  phase04_hardening.rs
crates/agentic-reality/benches/: benchmarks.rs  cli_bench.rs  mcp_bench.rs
crates/agentic-reality/examples/: bench_reality.rs
crates/agentic-reality/src/: lib.rs
crates/agentic-reality/src/bridges/: mod.rs
crates/agentic-reality/src/cache/: invalidation.rs  lru.rs  metrics.rs  mod.rs
crates/agentic-reality/src/cli/: commands.rs  mod.rs
crates/agentic-reality/src/engine/: mod.rs
crates/agentic-reality/src/engine/query/: coherence.rs  deployment.rs  environment.rs  mod.rs  reality.rs  resource.rs  stakes.rs  temporal.rs  topology.rs
crates/agentic-reality/src/engine/write/: coherence.rs  deployment.rs  environment.rs  mod.rs  reality.rs  resource.rs  stakes.rs  temporal.rs  topology.rs
crates/agentic-reality/src/ffi/: mod.rs
crates/agentic-reality/src/format/: file.rs  footer.rs  header.rs  mod.rs  sections.rs
crates/agentic-reality/src/index/: mod.rs
crates/agentic-reality/src/inventions/: mod.rs  topology_map.rs
crates/agentic-reality/src/metrics/: audit.rs  conservation.rs  mod.rs  tokens.rs
crates/agentic-reality/src/query/: budget.rs  delta.rs  intent.rs  mod.rs  pagination.rs
crates/agentic-reality/src/security/: mod.rs
crates/agentic-reality/src/storage/: mod.rs
crates/agentic-reality/src/types/: coherence.rs  deployment.rs  environment.rs  error.rs  ids.rs  mod.rs  reality.rs  resource.rs  stakes.rs  temporal.rs  topology.rs
crates/agentic-reality/src/validation/: mod.rs
crates/agentic-reality/tests/: conservation_test.rs  phase01_types.rs  phase02_engine.rs  phase03_format.rs  phase04_validation.rs  phase05_inventions.rs  phase06_bridges.rs  phase07_security.rs  phase08_stress.rs  phase09_ffi.rs
docs/: API.md  ARCHITECTURE.md  CLI.md  CONCEPTS.md  EXAMPLES.md  FAQ.md  INVENTIONS.md  MCP-TOOLS.md  PRIVACY.md  QUICKSTART.md  REPO_HYGIENE.md  SISTER-INTEGRATION.md  TROUBLESHOOTING.md
docs/public/: api-reference.md  architecture.md  benchmarks.md  cli-reference.md  command-surface.md  concepts.md  configuration.md  experience-with-vs-without.md  faq.md  ffi-reference.md  file-format.md  initial-problem-coverage.md  installation.md  integration-guide.md  mcp-prompts.md  mcp-resources.md  mcp-tools.md  playbooks-agent-integration.md  primary-problem-coverage.md  quickstart.md  runtime-install-sync.md  sister.manifest.json  troubleshooting.md
examples/: basic_usage.rs  bench_reality.rs  file_roundtrip.rs  mcp_client.rs
npm/wasm/: Cargo.toml
npm/wasm/src/: lib.rs
paper/paper-i-existential-grounding/: agenticreality-paper.aux  agenticreality-paper.bbl  agenticreality-paper.blg  agenticreality-paper.out  agenticreality-paper.tex  references.bib
planning-docs/: AGENTIC-REALITY-26-INVENTIONS.md  AGENTIC-REALITY-SPEC-PART1.md  AGENTIC-REALITY-SPEC-PART2.md  AGENTIC-REALITY-SPEC-PART3.md  AGENTIC-REALITY-SPEC-PART4.md  AGENTIC-REALITY-SPEC-PART5.md  CLAUDE-CODE-INSTRUCTIONS-REALITY.md
python/: pyproject.toml
scripts/: check-canonical-consistency.sh  check-canonical-sister.sh  check-command-surface.sh  check-install-commands.sh  check-mcp-consolidation.sh  check-runtime-hardening.sh  install.sh  release.sh  test-primary-problems.sh
