[workspace]
resolver = "2"
members = [
    "crates/agentic-reality",
    "crates/agentic-reality-mcp",
    "crates/agentic-reality-cli",
    "crates/agentic-reality-ffi",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/agentralabs/agentic-reality"
authors = ["Agentra Labs <contact@agentralabs.tech>"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tempfile = "3"
uuid = { version = "1.0", features = ["v4", "v5", "serde"] }
blake3 = "1.5"
thiserror = "2"
bincode = "1.3"
agentic-sdk = "0.2.0"
agentic-reality = { path = "crates/agentic-reality" }
agentic-reality-mcp = { path = "crates/agentic-reality-mcp" }
agentic-reality-cli = { path = "crates/agentic-reality-cli" }
agentic-reality-ffi = { path = "crates/agentic-reality-ffi" }
