[package]
name = "agentic-reality-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "MCP server for AgenticReality — universal LLM access to existential grounding"
homepage = "https://agentralabs.tech"
keywords = ["mcp", "llm", "reality", "agent", "ai"]
categories = ["development-tools"]

[lib]
name = "agentic_reality_mcp"
path = "src/lib.rs"

[[bin]]
name = "agentic-reality-mcp"
path = "src/main.rs"

[features]
default = ["stdio"]
stdio = []
sse = ["dep:axum", "dep:tower", "dep:tower-http"]

[dependencies]
agentic-reality = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.4", features = ["derive"] }
thiserror = "1.0"
uuid = { workspace = true }
chrono = { workspace = true }
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["cors"], optional = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = "0.4"
