[package]
name = "agentic-reality-wasm"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
agentic-reality = { path = "../../crates/agentic-reality", default-features = false, features = ["format"] }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
